--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ ul {
 }
 .row {
   display: flex;
+  justify-content: space-between;
 }
 a {
   color: inherit;
@@ -21,7 +22,7 @@ a {
 }
 li {
   display: inline;
-  margin: 0px 8px;
+  margin-right: 8px;
 }
 /* UTILITY */
 .badge {
@@ -43,14 +44,11 @@ header .row {
   padding: 20px 0px;
 }
 /* MAIN */
-.wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  row-gap: 10px;
-}
+
 .card {
   padding-top: 60px;
   width: calc(100% / 3);
+  max-width: 360px;
 }
 
 .card .card-image {
@@ -91,4 +89,30 @@ header .row {
 }
 .card:hover .card-hover {
   display: flex;
+}
+.price {
+  font-size: 14px;
+}
+.price .final {
+  font-weight: bold;
+  color: #ff0100;
+}
+.price .start {
+  text-decoration: line-through;
+}
+/* FOOTER */
+footer {
+  background-color: #1a1a1a;
+  color: white;
+  margin-top: 50px;
+  padding: 30px 0px;
+}
+.info h3 {
+  margin-bottom: 10px;
+}
+.media h5 {
+  margin-bottom: 10px;
+}
+.media .links {
+  font-size: 1.5rem;
 }
