--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ ul {
 }
 .row {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 a {
   color: inherit;
@@ -37,12 +37,25 @@ li {
 header {
   background-color: #fe6a00;
   color: white;
+  position: sticky;
+  top: 0;
+  z-index: 5;
+  box-shadow: 0px 1px 4px 0px #00000055;
+  font-weight: bold;
 }
 header .row {
+  justify-content: space-between;
   align-items: center;
   padding: 20px 0px;
 }
+
+header .icons li {
+  margin: 0px 0px 0px 8px;
+}
 /* MAIN */
+main .row {
+  justify-content: space-between;
+}
 
 .card {
   padding-top: 60px;
@@ -106,12 +119,16 @@ footer {
   margin-top: 50px;
   padding: 30px 0px;
 }
+footer .row {
+  justify-content: space-between;
+}
 .info h3 {
   margin-bottom: 10px;
 }
 .media h5 {
   margin-bottom: 10px;
 }
-.media .links {
+.media .links li {
   font-size: 1.5rem;
+  margin: 0px 0px 0px 8px;
 }
